fixed for students and for employers text cut off on mobile

--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -148,8 +148,8 @@
 			article {
 				@include padding(4em, 3em);
 				height: 30vh;
-				max-height: 30em;
-				min-height: 20em;
+				max-height: 80em;
+				min-height: 60em;
 			}
 		}
 
